<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_img"
    tools:context="com.example.amrut.easychatapplication.SignUpActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editTextLastName"
        android:hint="@string/lastNameHint"
        android:background="@drawable/borders"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextEmailID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editTextPassword1"
        android:hint="@string/passwordHint"
        android:background="@drawable/borders"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextPassword1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/editTextPassword2"
        android:hint="@string/repeatPasswrdHint"
        android:background="@drawable/borders"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="59dp"
        android:id="@+id/editTextEmailID"
        android:hint="@string/emailHint"
        android:background="@drawable/borders"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinnerGender"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancelHint"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:layout_alignBaseline="@+id/buttonSignUp"
        android:layout_alignBottom="@+id/buttonSignUp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/signUpLabel"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:layout_width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAppTitle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/imageViewProfilePic"
        android:layout_below="@+id/textViewAppTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:hint="@string/firstNameHint"
        android:background="@drawable/borders"
        android:layout_below="@+id/imageViewProfilePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />
</RelativeLayout>
