<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_img"
    tools:context="com.example.amrut.easychatapplication.MainActivity">

    <TextView
        android:text="@string/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textViewAppTitle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>


    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/editTextPassword"
        android:hint="@string/password_hint"
        android:background="@drawable/borders"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="42dp"
        android:id="@+id/editTextEmail"
        android:hint="@string/email_hint"
        android:background="@drawable/borders"
        android:layout_below="@+id/textViewAppTitle"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_alignLeft="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="49dp"
        android:layout_alignTop="@+id/buttonSignIn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/dont_hav_acc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="15dp"
        android:layout_below="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:text="@string/signUpLinkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignUpLink"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:autoLink="all"
        android:linksClickable="true"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword" />

    <Button
        android:layout_width="200dp"
        android:id="@+id/buttonSignIn"
        android:layout_height="45dp"
        android:text="@string/signInLabel"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignLeft="@+id/textViewAppTitle"
        android:layout_alignStart="@+id/textViewAppTitle" />
</RelativeLayout>
